--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -40,13 +40,13 @@ body {
 }
 
 nav ul {
-  list-style: none;
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
   gap: 1.5rem;
+  list-style: none;
   padding: 0;
-  margin: 0;
+  margin: 0;
 }
 
 nav ul li a {
@@ -87,6 +87,19 @@ p {
   color: #444;
 }
 
+#projects a:link,
+#projects a:visited,
+#projects a:hover,
+#projects a:active {
+  color: #3b82f6; /* Tailwind blue-500 */
+  text-decoration: none;
+  font-weight: 500;
+}
+
+#projects a:hover {
+  text-decoration: underline;
+}
+
 /* FOOTER */
 footer {
   background-color: #0f172a;
@@ -110,13 +123,11 @@ footer {
     font-size: 0.9rem;
   }
 
-  nav ul {
-    flex-direction: column;
-    align-items: center;
+ nav ul {
     gap: 1.7rem;
   }
 
-   nav a {
+  nav a {
     font-size: 0.8rem;
   }
 
@@ -140,14 +151,14 @@ footer {
     font-size: 2rem;
   }
 
-  nav ul {
-    flex-direction: column;
+ nav ul {
     gap: 2rem;
   }
 
-    nav a {
+  nav a {
     font-size: 0.9rem;
   }
+
 
   h2 {
     font-size: 1.6rem;
